Query all games for a singlr user
